Prevent password results to be reported after another run is started

CancelableTaskTracker doesn't completely prevent getting an old result, 
so also delete the weakptr to avoid cases where two results are 
reported in a row.

Bug: 761952
Change-Id: I727ea76c455c260a7db0e048b2e9e3d9e69069ed
Reviewed-on: https://chromium-review.googlesource.com/649529
Commit-Queue: Christian Dullweber <dullweber@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Martin Šrámek <msramek@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499640}
Former-commit-id: ce7491a22d430792718c1d6f1d3c306b2cda4c76