components/browsing_data/core/counters/passwords_counter.cc
@@ -43,7 +43,8 @@ const char* PasswordsCounter::GetPrefName() const {
 }
 
 void PasswordsCounter::Count() {
-  cancelable_task_tracker()->TryCancelAll();
+  CancelAllRequests();
+
   // TODO(msramek): We don't actually need the logins themselves, just their
   // count. Consider implementing |PasswordStore::CountAutofillableLogins|.
   // This custom request should also allow us to specify the time range, so that
