components/password_manager/core/browser/password_store_consumer.h
@@ -48,6 +48,8 @@ class PasswordStoreConsumer {
 
   bool HasWeakPtrs() const { return weak_ptr_factory_.HasWeakPtrs(); }
 
+  void CancelAllRequests();
+
  protected:
   virtual ~PasswordStoreConsumer();
 
